Built-in google translate - fixed vertical scrolling visible (cherry picked from commit 3f42189)

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: hidden;
+}
+
 .navbar-fixed {
     height: 0;
 }
